<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To-Do List</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_task">Create Task</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text_title">Title</string>
    <string name="edit_text_date">Date</string>
    <string name="edit_text_time">Time</string>
    <string name="textview_priority">Priority</string>
    <string name="radiobutton_high">High</string>
    <string name="radiobutton_medium">Medium</string>
    <string name="radiobutton_low">Low</string>
    <string name="button_save">Save</string>
    <string name="textview_task">Task</string>
    <string name="textview_tasks">Tasks</string>
    <string name="error_title">Title should  not be empty and length should be less than 20</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="Name">txt_view_name</string>
    <string name="txtview_name">Name:</string>
    <string name="txtview_date">Date</string>
    <string name="txtview_time">Time</string>
    <string name="txtview_priority">Priority:</string>
    <string name="txtview_task_info">Task Information</string>
    <string name="title_activity_edit">Edit Task</string>
    <string name="title_create_task">Edit Task</string>
    <string name="button_edit_save">Save</string>
    <string name="alert_discard">Are you sure you want to discard this task?</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_discard_title">Discard Task</string>
    <string name="error_date_time">Date or time cannot be empty</string>

</resources>
